<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FirmwareUpgrade</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="select_upgrade_file">请先选择升级文件,然后点击\"固件升级\"按钮</string>
    <string name="firmware_upgrade">固件升级</string>
	<string name="ssid">SSID</string>
	<string name="password">Password</string>
	<string name="refresh_bn">刷新</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
</resources>